# framework

./: CMakeLists.txt  README.md  conanfile.txt
resources/: config.ini
src/: main.cc
src/comm/: Singleton.hh
src/framework/: Framework.hh
src/ini/: Ini.cc  Ini.hh
src/window/: Window.cc  Window.hh
